--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,25 +3,22 @@ name = "rust-eth"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-ring = "0.16.20"
-data-encoding = "2.3.2"
-num-bigint = "0.4.3"
-sled = "0.34.7"
-serde = { version = "1.0.132", features = ["derive"] }
-bincode = "1.3.3"
-structopt = "0.3.25"
-clap = "2.34.0"
-rust-crypto = "0.2.36"
-bs58 = "0.4.0"
-rustc-serialize = "0.3.24"
-uuid = { version = "0.8.2", features = ["v4"]}
-log = "0.4.14"
-env_logger = "0.9.0"
-serde_json = "1.0.73"
-once_cell = "1.9.0"
+clap = {version="3.1.9", features = ["derive"]}
+ethers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", default-features = false, features = ["legacy"] }
+ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["full"] }
+ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev="6b6c5115838008565d774d784262e61e01129ebb", features = ["ws"] }
+eyre = "*"
+hex = "*"
+tokio = { version = "1.17.0", features = ["full"] }
+tracing = "0.1.34"
+tracing-subscriber = "0.3.11"
 
-[dev-dependencies]
-assert_cmd = "0.11.0"
+[[bin]]
+name = "transact"
+path="src/basic_transaction.rs"
+
+
+[[bin]]
+name = "deploy"
+path="src/contract_deploy.rs"
